# faucet_program

./: .gitignore  Cargo.toml  README.md  build.rs
cli/src/: main.rs
generate-types/: Cargo.toml
generate-types/src/: lib.rs  main.rs
setup/: Cargo.toml
setup/src/: api.rs  main.rs
src/: api.rs  lib.rs  metadata.rs  tests.rs
