[package]
name = "setup"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt         ={ version="0.35.3", default-features=false, features=["jsonrpsee", "native", "substrate-compat"] }
serde              ={ version="1.0", default-features=false, features=["derive"] }
serde_json         ="1.0"
tokio  ={ version="1.38", features=["macros", "fs", "rt-multi-thread", "io-util", "process", "sync"] }
dotenv = "0.15.0"
hex             ={ version="0.4.3" }
codec       ={ package="parity-scale-codec", version="3.0.0", default-features=false }
